# hello-flask

./: .flaskenv  .replit  README.md  app.db  app.py  data.json  package-lock.json  pyproject.toml  requirements.txt  shortener_app.py
app/: __init__.py  data.json  models.py  routes.py  shortener.py
app/templates/: redirect.html
migrations/versions/: d7d51a76eb11_shorturl_table.py
