[tool.poetry]
name = "hello-flask"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
flask-sqlalchemy = "^2.4.4"
python-dotenv = "^0.15.0"
flask-migrate = "^2.5.3"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
short_url = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
